--- a/Практикум/index.html
+++ b/Практикум/index.html
@@ -25,6 +25,7 @@
                 Напишите функцию firstFunction, которая при нажатии кнопки выводит в консоль переменную
                 first.
             </p>
+            <button onclick="firstFunction()">Кнопка</button>
         </section>
 
         <section>
